added kitty conf

--- a/config_mac/kitty.conf
+++ b/config_mac/kitty.conf
@@ -3,8 +3,8 @@
 map cmd+shift+t new_tab_with_cwd
 map cmd+a previous_tab
 map cmd+d next_tab
-map cmd+shift+d new_window
-map cmd+shift+s close_window
+map cmd+shift+d new_window_with_cwd
+map cmd+shift+w close_window
 
 map cmd+left neighboring_window left
 map cmd+right neighboring_window right
@@ -122,3 +122,4 @@ color15 #A6ADC8
 
 allow_remote_control yes
 
+macos_option_as_alt yes
